--- a/gb/24/7/29/n14300510.md
+++ b/gb/24/7/29/n14300510.md
@@ -16,45 +16,41 @@
 <p>“在郊区有一块地，那真的很美好！”来春说。我似乎能听出这话里的得意。她是这块土地的劳动者，为土地的春意盎然、蓬勃抽穗而流汗而收获，她当然有得意的资格。或许，在这片她小时候疯跑疯闹、捉鱼爬树、恣意成长的土地上，她能迎来中年的蜕变，重觅儿时无忧光阴。</p>
 <p>这样的一幕，也许会出现在多个阳光灿烂的日子：开农机车去田野施肥的老农，会碰到穿淡蓝色旗袍的来春。她打着碎花伞在田埂上蹲下来，探身摘一把红草莓。她莞尔一笑，那一地摇曳的绿叶似乎听到她在吟唱：诗债到春无处避，离愁因醉暂时销……</p>
 <p>来春是平凡人，似乎又有那么一点不凡。她晒得有点黑，整日为菜事为酒事为人间烟火气而忙个不亦乐乎，这已经不是她的业余爱好。她曾经是一名人民教师，但现在她的主要精力还是放到这片土地上。昔日的学生们仍然恭敬地称她李老师。</p>
-<p>来春的城市离我不够二小时车程，我没有拜访过她，她也没有见过我。始于文，敬于品，止于礼的缘，这是人间的真。</p>
-<p>作者 简介：容&#20094;，广东省作家协会会员，岭南师范学院雷阳文化研究所研究员。发表诗歌、散文、小小说等作品约30万字散见各类报刊，海内外中文网站或入编各种文集。十多次获各级征文奖。</p>
+<p>来春的城市离我不够二小时车程，我没有拜访过她，她也没有见过我。始于文，敬于品，止于礼的缘，这是人间的真。＠</p>
 <p>责任编辑：林芳宇</p>
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/2/n3742964.md#1">新诗：今夜笑意灿如露(1)房之梦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/2/n3743048.md#1">容&#20094; : 寓言 《锦鸡贺喜》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/2/n3743318.md#1">容&#20094;：雷州石狗的世外桃源</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/4/n3744350.md#1">惜福的人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/9/n3748580.md#1">新诗：无眠的旷野(1)向受伤的真相 起立</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/15/n3753640.md#1">新诗：无眠的旷野</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/22/n3783248.md#1">新诗：无眠的旷野(30)关于真理</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/13/n14180184.md#1">心中的明灯——短文二篇</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/15/n14181608.md#1">父亲写的散文诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/10/n14199105.md#1">《奥本海默》：一部重量级、史诗级的电影（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/10/n14199108.md#1">《奥本海默》：一部重量级、史诗级的电影（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/10/n14199197.md#1">隽永动人的台湾歌谣  凤飞飞《三步珠泪》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/14/n14202389.md#1">慈母失心的故事&ensp;河南农村真人实事改编</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/25/n14210623.md#1">热情天真的童稚情怀——《号手的假日》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/3/n14217141.md#1">祭父母文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262067.md#1">时闻一叶落 人生为几何</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298104.md#1">槐花舞月光</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/8/n9817670.md#1" target="_blank">汉清：百年沧桑</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10948448.md#1" target="_blank">新年感恩 中国百姓盼李洪志大师早日回国</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296328.md#1">青春走一回  儿子，谢谢你教会我这一课！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299288.md#1">【未解之谜】多个预言印证? 2025年有巨变 日台要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296470.md#1">【未解之谜】数千年来无人敢登顶 西藏神山冈仁波齐峰之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279168.md#1">【历史的瞬间】贝隆夫人──她的谎言与美丽，让阿根廷哭泣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298593.md#1">命大的人：穿越迫害的神韵艺术家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14299943.md#1">【时事军事】乌军获美军援后 为何弹药仍是问题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299898.md#1">【新闻五人行】奥运遇冷 中国评论区“躺平”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299362.md#1">【晚间新闻】巴黎奥运塞纳河开幕 安保规模空前</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298968.md#1">组图：三级古迹——台湾糯米石桥</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299649.md#1">外国人怕来 中共多部门甩锅住宿业 引嘲讽</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299434.md#1">实习生炫富引爆网络 中信建投重要信息遭泄露</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299514.md#1">席琳·迪翁巴黎奥运开幕式献唱《爱的赞歌》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299884.md#1">那英《歌手》夺冠 迪玛希忘关麦克风爆黑幕？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14300054.md#1">“钢铁人”将返《复仇者》当反派末日博士</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299914.md#1">《神偷奶爸4》全球票房达6亿美元 8月线上发行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299487.md#1">蔡少芬自曝遭同剧演员背刺 拍戏迟到引导演怒批</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14300066.md#1">专家：还没切的西瓜放对地方 可保新鲜两周</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299044.md#1">专家：音乐会影响思想 让人从消极变积极</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299634.md#1">植物胰岛素：苦瓜 吃法不对反受害</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299608.md#1">让林黛玉体质一月出奇迹的地瓜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299827.md#1">“白米”最养人胃气 早餐吃它不易老</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544989.md#1">开饺子店被吐槽出餐慢 大陆演员谭凯直播致歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/29/n14300510.htm">散文：执鞭归来春又至</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300510.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
